--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,18 @@
 
 # misc
 .DS_Store
+.env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.development
+.env.test
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# package
+package-lock.json
+*storybook.log
+
+src/stories
