--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/recoil": "^0.0.9",
-    "@vitejs/plugin-react": "^4.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "dayjs": "^1.11.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -19,7 +19,7 @@
     "storybook-addon-react-docgen": "^1.2.44",
     "styled-components": "^6.1.11",
     "typescript": "^4.9.5",
-    "vite": "^5.2.12",
+    "vite": "^5.3.0",
     "vite-tsconfig-paths": "^4.3.2",
     "web-vitals": "^2.1.4",
     "zustand": "^4.5.2"
@@ -27,6 +27,7 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
+    "serve": "vite preview",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 6006",
@@ -72,7 +73,7 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-storybook": "^0.8.0",
     "globals": "^15.3.0",
-    "prettier": "^3.3.0",
+    "prettier": "^3.3.2",
     "storybook": "^8.1.6",
     "typescript-eslint": "^7.12.0"
   }
