--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^6.23.1",
-		"recoil": "^0.7.7",
+		"react-toastify": "^10.0.5",
 		"storybook-addon-react-docgen": "^1.2.44",
 		"styled-components": "^6.1.11",
 		"typescript": "^4.9.5",
