--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"dayjs": "^1.11.11",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-inlinesvg": "^4.1.3",
 		"react-router-dom": "^6.23.1",
 		"react-toastify": "^10.0.5",
 		"storybook-addon-react-docgen": "^1.2.44",
