--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@types/react-dom": "^18.3.0",
 		"@types/recoil": "^0.0.9",
 		"@vitejs/plugin-react": "^4.3.1",
+		"axios": "^1.7.2",
 		"dayjs": "^1.11.11",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
@@ -19,8 +20,6 @@
 		"react-toastify": "^10.0.5",
 		"storybook-addon-react-docgen": "^1.2.44",
 		"styled-components": "^6.1.11",
-		"typescript": "^4.9.5",
-		"vite": "^5.3.0",
 		"vite-tsconfig-paths": "^4.3.2",
 		"web-vitals": "^2.1.4",
 		"zustand": "^4.5.2"
@@ -69,6 +68,8 @@
 		"globals": "^15.3.0",
 		"prettier": "^3.3.2",
 		"storybook": "^8.1.6",
-		"typescript-eslint": "^7.12.0"
+		"typescript": "^5.5.3",
+		"typescript-eslint": "^7.12.0",
+		"vite": "^5.3.3"
 	}
 }
