--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"target": "es5",
+		"target": "esnext",
 		"lib": ["dom", "dom.iterable", "esnext"],
 		"allowJs": true,
 		"skipLibCheck": true,
@@ -18,7 +18,8 @@
 		"typeRoots": ["./types", "./node_modules/@types"],
 		"declaration": true,
 		"declarationDir": "./types",
-		"baseUrl": "src"
+		"baseUrl": "src",
+		"allowImportingTsExtensions": true
 	},
 	"include": ["src"],
 	"exclude": ["node_modules", "build"]
