--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"react-dom": "^18.3.1",
 		"react-inlinesvg": "^4.1.3",
 		"react-router-dom": "^6.23.1",
+		"react-select": "^5.8.0",
 		"react-toastify": "^10.0.5",
 		"storybook-addon-react-docgen": "^1.2.44",
 		"styled-components": "^6.1.11",
